--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,22 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="jotto">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Jotto</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/home">Home</a></li>
+    <li><a href="#/lobby">Lobby</a></li>
+    <li><a href="#/help">Help</a></li>
   </ul>
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/socket.io.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
 </body>
 </html>
