Many cleanups. Fix some login quirks, CSS improvements.

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,16 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/home">Home</a></li>
-    <li><a href="#/lobby">Lobby</a></li>
-    <li><a href="#/help">Help</a></li>
-  </ul>
+  <h1>Jotto</h1>
+  <div>
+    <ul class="menu">
+      <li><a href="#/home">Home</a></li>
+      <li><a href="#/lobby">Lobby</a></li>
+      <li><a href="#/help">Help</a></li>
+    </ul>
+  </div>
+
+  <br/>
 
   <div ng-view></div>
 
